--- a/home/templates/userside/main.html
+++ b/home/templates/userside/main.html
@@ -262,7 +262,8 @@
     <!-- Contact Javascript File -->
     <script src="{% static 'tem_two/mail/jqBootstrapValidation.min.js' %}"></script>
     <script src="{% static 'tem_two/mail/contact.js' %}"></script>
-
+    {% block mainscript %} {% endblock mainscript %}
+    <script src="{% static 'tem_two/js/checkout.js' %}"></script>
     <!-- Template Javascript -->
     <script src="{% static 'tem_two/js/main.js' %}"></script>
     <script>
