--- a/home/templates/userside/main.html
+++ b/home/templates/userside/main.html
@@ -83,12 +83,13 @@
                 </a>
             </div>
             <div class="col-lg-6 col-6 text-left">
-                <form action="">
+                <form action="{% url 'search' %}" method="POST">
+                    {% csrf_token %}
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for products">
+                        <input type="text" class="form-control" name="keyword" placeholder="Search for products">
                         <div class="input-group-append">
                             <span class="input-group-text bg-transparent text-primary">
-                                <i class="fa fa-search"></i>
+                                <button href="{% url 'search' %}"type="submit" style="background-color: transparent; border: none; padding: 0;"><i class="fa fa-search"></i></button>
                             </span>
                         </div>
                     </div>
@@ -109,6 +110,44 @@
                 </a>
             </div>
         </div>
+        <div class="row align-items-center py-3 px-xl-5">
+            <div class="col-lg-12">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+                <a href="" class="text-decoration-none d-block d-lg-none">
+                    <h1 class="m-0 display-5 font-weight-semi-bold"><span
+                            class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
+                </a>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                    <div class="navbar-nav mr-auto py-0">
+                        <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
+                        <a href="{% url 'shop' %}" class="nav-item nav-link">Shop</a>
+                        <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="{% url 'cart' %}" class="dropdown-item">Shopping Cart</a>
+                                <a href="checkout.html" class="dropdown-item">Checkout</a>
+                            </div>
+                        </div>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    </div>
+                    <div class="navbar-nav ml-auto py-0">
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'logout' %} " class="nav-item nav-link">Logout</a>
+                        {% else %}
+                        <a href="{% url 'login' %} " class="nav-item nav-link">Login</a>
+                        {% endif %}
+                        <a href="{% url 'signup' %} " class="nav-item nav-link">Register</a>
+                    </div>
+                </div>
+            </nav>
+
+        </div>
+        </div>
+        
     </div>
     <!-- Topbar End -->
 
@@ -118,49 +157,25 @@
         <div class="row border-top px-xl-5">
             {% block navbar %} {% endblock navbar %}
 
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
-                    <a href="" class="text-decoration-none d-block d-lg-none">
-                        <h1 class="m-0 display-5 font-weight-semi-bold"><span
-                                class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
-                    </a>
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav mr-auto py-0">
-                            <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
-                            <a href="{% url 'shop' %}" class="nav-item nav-link">Shop</a>
-                            <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="{% url 'cart' %}" class="dropdown-item">Shopping Cart</a>
-                                    <a href="checkout.html" class="dropdown-item">Checkout</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
-                        <div class="navbar-nav ml-auto py-0">
-                            {% if user.is_authenticated %}
-                            <a href="{% url 'logout' %} " class="nav-item nav-link">Logout</a>
-                            {% else %}
-                            <a href="{% url 'login' %} " class="nav-item nav-link">Login</a>
-                            {% endif %}
-                            <a href="{% url 'signup' %} " class="nav-item nav-link">Register</a>
-                        </div>
-                    </div>
-                </nav>
+            
 
                 {% block corousel%}
 
                 {% endblock corousel%}
-            </div>
-            <div class="col-lg-3">
+                {% if messages %}
+<div class="alert {% if message.tags == 'error' %}alert-danger alert-dismissible fade show{% elif message.tags == 'success' %}alert-success alert-dismissible fade show {% endif %}" role="alert">
+    {% for message in messages%}
+    <strong>{{ message.tags }}</strong> {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  {% endfor %}
+</div>
+{% endif %}
+            
+            <!-- <div class="col-lg-3">
                 {%block right %}
                 {% endblock right %}
 
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Navbar End -->
