--- a/home/templates/userside/mainshop.html
+++ b/home/templates/userside/mainshop.html
@@ -9,23 +9,17 @@
     </a>
     <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
         <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
+            {% for category in categories%}
             <div class="nav-item dropdown">
-                <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
+                <a href="" class="nav-link" data-toggle="dropdown">{{category.name}}<i class="fa fa-angle-down float-right mt-1"></i></a>
                 <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                    <a href="" class="dropdown-item">Men's Dresses</a>
-                    <a href="" class="dropdown-item">Women's Dresses</a>
-                    <a href="" class="dropdown-item">Baby's Dresses</a>
+                    <a href="{% url 'catpro' category.id %}" class="dropdown-item">All</a> 
+                    {% for subcat in category.subcat.all%}
+                    <a href="{% url 'subcategory_page' category.id subcat.id %}" class="dropdown-item">{{subcat.sub_name}}</a>
+                   {%endfor%}
                 </div>
             </div>
-            <a href="" class="nav-item nav-link">Shirts</a>
-            <a href="" class="nav-item nav-link">Jeans</a>
-            <a href="" class="nav-item nav-link">Swimwear</a>
-            <a href="" class="nav-item nav-link">Sleepwear</a>
-            <a href="" class="nav-item nav-link">Sportswear</a>
-            <a href="" class="nav-item nav-link">Jumpsuits</a>
-            <a href="" class="nav-item nav-link">Blazers</a>
-            <a href="" class="nav-item nav-link">Jackets</a>
-            <a href="" class="nav-item nav-link">Shoes</a>
+            {%endfor%}
         </div>
     </nav>
 <!-- </div> -->
@@ -38,32 +32,31 @@
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                 <input type="checkbox" class="custom-control-input" checked id="price-all">
                 <label class="custom-control-label" for="price-all">All Price</label>
-                <span class="badge border font-weight-normal">1000</span>
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                <input type="checkbox" class="custom-control-input" id="price-1">
-                <label class="custom-control-label" for="price-1">$0 - $100</label>
-                <span class="badge border font-weight-normal">150</span>
+                <input type="checkbox" class="custom-control-input" id="price-1" data-min="0" data-max="500">
+                <label class="custom-control-label" for="price-1">₹0-₹500</label>
+                <!-- <span class="badge border font-weight-normal">150</span> -->
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                <input type="checkbox" class="custom-control-input" id="price-2">
-                <label class="custom-control-label" for="price-2">$100 - $200</label>
-                <span class="badge border font-weight-normal">295</span>
+                <input type="checkbox" class="custom-control-input" id="price-2" data-min="500" data-max="1000">
+                <label class="custom-control-label" for="price-2">₹500-₹1000</label>
+                
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                <input type="checkbox" class="custom-control-input" id="price-3">
-                <label class="custom-control-label" for="price-3">$200 - $300</label>
-                <span class="badge border font-weight-normal">246</span>
+                <input type="checkbox" class="custom-control-input" id="price-3"data-min="1000" data-max="1500">
+                <label class="custom-control-label" for="price-3">₹1000-₹1500</label>
+               
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                <input type="checkbox" class="custom-control-input" id="price-4">
-                <label class="custom-control-label" for="price-4">$300 - $400</label>
-                <span class="badge border font-weight-normal">145</span>
+                <input type="checkbox" class="custom-control-input" id="price-4" data-min="1500" data-max="2000">
+                <label class="custom-control-label" for="price-4">₹1500-₹2000</label>
+                
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
                 <input type="checkbox" class="custom-control-input" id="price-5">
-                <label class="custom-control-label" for="price-5">$400 - $500</label>
-                <span class="badge border font-weight-normal">168</span>
+                <label class="custom-control-label" for="price-5">Above 2000</label>
+               
             </div>
         </form>
     </div>
@@ -146,7 +139,17 @@
     <!-- Size End -->
 </div>
 <!-- Shop Sidebar End -->
-
+<div class="col-lg-9">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+        <a href="" class="text-decoration-none d-block d-lg-none">
+            <h1 class="m-0 display-5 font-weight-semi-bold"><span
+                    class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+    </nav>
 
 {% endblock navbar %}
 
@@ -182,9 +185,9 @@
 
 
     <!-- Shop Start -->
-   
+<!--    
     <div class="container-fluid pt-5">
-    <div class="row px-xl-5">
+    <div class="row px-xl-5"> -->
             <!-- Shop Sidebar Start -->
            
 
@@ -327,9 +330,9 @@
                 
             </div>
             <!-- Shop Product End -->
-        </div>
-    </div>
+        </div> </div>
+    <!-- </div> </div> </div> -->
     <!-- Shop End -->
     
 
-    {% endblock corousel %} 
+    {% endblock corousel %} </div>
