--- a/home/templates/userside/shop.html
+++ b/home/templates/userside/shop.html
@@ -2,32 +2,8 @@
 
 {% block navbar %}
  <!-- category dropdown ends -->
-<div class="col-lg-3 d-none d-lg-block">
-    <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-        <h6 class="m-0">Categories</h6>
-        <i class="fa fa-angle-down text-dark"></i>
-    </a>
-    <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
-        <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
-                <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                    <a href="" class="dropdown-item">Men's Dresses</a>
-                    <a href="" class="dropdown-item">Women's Dresses</a>
-                    <a href="" class="dropdown-item">Baby's Dresses</a>
-                </div>
-            </div>
-            <a href="" class="nav-item nav-link">Shirts</a>
-            <a href="" class="nav-item nav-link">Jeans</a>
-            <a href="" class="nav-item nav-link">Swimwear</a>
-            <a href="" class="nav-item nav-link">Sleepwear</a>
-            <a href="" class="nav-item nav-link">Sportswear</a>
-            <a href="" class="nav-item nav-link">Jumpsuits</a>
-            <a href="" class="nav-item nav-link">Blazers</a>
-            <a href="" class="nav-item nav-link">Jackets</a>
-            <a href="" class="nav-item nav-link">Shoes</a>
-        </div>
-    </nav>
+<div class="col-lg-3 ">
+   
 <!-- </div> -->
     <!-- category dropdown ends -->
 <!-- <div class="col-lg-3 col-md-12"> -->
@@ -42,28 +18,28 @@
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                 <input type="checkbox" class="custom-control-input" id="price-1">
-                <label class="custom-control-label" for="price-1">$0 - $100</label>
-                <span class="badge border font-weight-normal">150</span>
+                <label class="custom-control-label" for="price-1">₹0-₹500</label>
+                <!-- <span class="badge border font-weight-normal">150</span> -->
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                 <input type="checkbox" class="custom-control-input" id="price-2">
-                <label class="custom-control-label" for="price-2">$100 - $200</label>
-                <span class="badge border font-weight-normal">295</span>
+                <label class="custom-control-label" for="price-2">₹500-₹1000</label>
+                
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                 <input type="checkbox" class="custom-control-input" id="price-3">
-                <label class="custom-control-label" for="price-3">$200 - $300</label>
-                <span class="badge border font-weight-normal">246</span>
+                <label class="custom-control-label" for="price-3">₹1000-₹1500</label>
+               
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                 <input type="checkbox" class="custom-control-input" id="price-4">
-                <label class="custom-control-label" for="price-4">$300 - $400</label>
-                <span class="badge border font-weight-normal">145</span>
+                <label class="custom-control-label" for="price-4">₹1500-₹2000</label>
+                
             </div>
             <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
                 <input type="checkbox" class="custom-control-input" id="price-5">
-                <label class="custom-control-label" for="price-5">$400 - $500</label>
-                <span class="badge border font-weight-normal">168</span>
+                <label class="custom-control-label" for="price-5">Above 2000</label>
+               
             </div>
         </form>
     </div>
@@ -146,7 +122,17 @@
     <!-- Size End -->
 </div>
 <!-- Shop Sidebar End -->
-
+<div class="col-lg-9">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+        <a href="" class="text-decoration-none d-block d-lg-none">
+            <h1 class="m-0 display-5 font-weight-semi-bold"><span
+                    class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+    </nav>
 
 {% endblock navbar %}
 
@@ -158,8 +144,8 @@
 
     <!-- Shop Start -->
    
-    <div class="container-fluid pt-5">
-    <div class="row px-xl-5">
+    <!-- <div class="container-fluid pt-5">
+    <div class="row px-xl-5"> -->
             <!-- Shop Sidebar Start -->
            
 
@@ -242,11 +228,11 @@
         <!-- </div>
     </div> -->
     <!-- Shop End -->
-    <div class="container-fluid pt-5">
-        <div class="row px-xl-5">
+    <!-- <div class="container-fluid pt-5">
+        <div class="row px-xl-5"> -->
             <!-- Shop Sidebar Start -->
             <!-- Shop Product Start -->
-            <div class="col-lg-12 col-md-12">
+            <!-- <div class="col-lg-12 col-md-12"> -->
                 <div class="row pb-3">
                     <div class="col-12 pb-1">
                         <div class="d-flex align-items-center justify-content-between mb-4">
@@ -299,9 +285,9 @@
                 
             </div>
             <!-- Shop Product End -->
-        </div>
-    </div>
+        <!-- </div> -->
+    <!-- </div> </div> </div> -->
     <!-- Shop End -->
     
 
-    {% endblock corousel %} 
+    {% endblock corousel %} </div>
